--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,2 +1,6 @@
-@import url("./header.css");
 @import url("./base.css");
+@import url("./header.css");
+@import url("./hero.css");
+@import url("./meto.css");
+@import url("./step.css");
+@import url("./num.css");
