--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,3 +4,5 @@
 @import url("./meto.css");
 @import url("./step.css");
 @import url("./num.css");
+@import url("./port.css");
+@import url("./feed.css");
