--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -1,24 +1,30 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 :root {
   --bg: #ebe7e1;
   --c0: #faf8f5;
   --c1: #b0b0b0;
   --c2: #707070;
   --c3: #404040;
+
+  --gap0: 0px;
+  --gap1: 8px;
+  --gap2: 16px;
+  --gap3: 24px;
+  --gap4: 32px;
+  --gap5: 48px;
+  --gap6: 64px;
+  --gap7: 80px;
+  --gap8: 96px;
+  --gap9: 128px;
 }
 
 body {
   background-color: var(--bg);
-}
-
-ul,
-a,
-h1,
-h2,
-h3,
-h4,
-p,
-body {
-  margin: 0;
+  width: 100%;
 }
 
 h1,
@@ -49,6 +55,20 @@ img {
   max-width: 100%;
 }
 
+.container {
+  max-width: 1220px;
+  margin: 0 auto;
+  border: 2px solid green;
+}
+
+@media (max-width: 800px) {
+  .container {
+    max-width: 1220px;
+    margin: 0 auto;
+    border: 2px solid green;
+  }
+}
+
 /*utilitários*/
 .btn__pri {
   padding: 10px 20px;
@@ -57,9 +77,9 @@ img {
   background: var(--c0);
 
   box-shadow: 0px 4px 20px -10px rgba(0, 0, 0, 0.25);
-  border-radius: 16px;
   font-weight: 700;
   transition: 0.4s;
+  text-align: center;
 }
 
 .btn__pri:hover {
@@ -73,9 +93,9 @@ img {
 
   border: 2px solid var(--c0);
   box-shadow: 0px 4px 25px -10px rgba(0, 0, 0, 0.5);
-  border-radius: 16px;
   background-color: var(--bg);
   transition: 0.4s;
+  text-align: center;
 }
 
 .btn__sec:hover {
@@ -107,4 +127,36 @@ img {
 .sec__tit p {
   font-weight: 300;
   color: var(--c1);
+}
+
+@media (max-width: 800px) {
+  .btn__pri {
+    padding: 10px 16px;
+    width: 100%;
+  }
+
+  .btn__sec {
+    padding: 10px 16px;
+    width: 100%;
+  }
+
+  .sec__tit {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    font-family: "Saira", sans-serif;
+  }
+
+  .sec__tit h2 {
+    font-weight: 700;
+    font-size: 3rem;
+    line-height: 70px;
+
+    color: var(--c3);
+  }
+
+  .sec__tit p {
+    font-weight: 300;
+    color: var(--c1);
+  }
 }
