--- a/assets/css/num.css
+++ b/assets/css/num.css
@@ -6,7 +6,7 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   font-family: "Saira", sans-serif;
-  padding: 2rem 100px;
+  padding: 2rem 80px;
 }
 
 .num__grid img {
@@ -39,4 +39,11 @@
   justify-content: center;
   margin-left: 1rem;
   gap: 0.5rem;
+}
+
+@media (max-width: 800px) {
+  .num {
+    background-color: var(--c3);
+    display: none;
+  }
 }
