--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,3 +6,5 @@
 @import url("./num.css");
 @import url("./port.css");
 @import url("./feed.css");
+@import url("./svgs.css");
+@import url("./gap.css");
