--- a/assets/css/svgs.css
+++ b/assets/css/svgs.css
@@ -1,5 +1,6 @@
 .relative {
   position: relative;
+  height: 100vh;
 }
 
 .bg__hero {
@@ -8,7 +9,6 @@
   left: 0;
 
   width: 100%;
-  height: 100vh;
 
   overflow: hidden;
   z-index: -1;
@@ -19,6 +19,7 @@
 }
 
 .svg-hero {
+  margin: 1px;
 }
 
 @media (max-width: 800px) {
