--- a/assets/css/hero.css
+++ b/assets/css/hero.css
@@ -4,6 +4,8 @@
   font-family: "Saira", sans-serif;
   color: var(--c2);
   font-weight: 300;
+  height: 100vh;
+  align-items: center;
 }
 
 .hero__det {
