--- a/assets/css/svgs.css
+++ b/assets/css/svgs.css
@@ -1,11 +1,10 @@
 .relative {
   position: relative;
-  height: 100vh;
 }
 
 .bg__hero {
   position: absolute;
-  top: 0;
+  top: var(--gap7);
   left: 0;
 
   width: 100%;
@@ -22,8 +21,50 @@
   margin: 1px;
 }
 
+#quad-hero2 {
+  transform-origin: center center;
+  transform-box: fill-box;
+  animation: rotate 4s ease infinite alternate;
+}
+
+#quad-hero1 {
+  transform-origin: center center;
+  transform-box: fill-box;
+  animation: rotate 4s ease infinite alternate;
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(60deg);
+  }
+}
+
+@keyframes rotate2 {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(270deg);
+  }
+}
+
 @media (max-width: 800px) {
   .svg-hero {
     transform: scale(1.8) rotate(30deg);
+  }
+}
+
+@media (min-width: 1800px) {
+  .svg-hero {
+    transform: scale(1.5);
+  }
+
+  .bg__hero {
+    overflow-y: visible !important;
+    height: 100%;
+    top: var(--gap0);
   }
 }
