--- a/assets/css/secoes/meto.css
+++ b/assets/css/secoes/meto.css
@@ -82,13 +82,12 @@
   font-size: 1rem;
   line-height: 1.25rem;
   margin-top: 1rem;
-  /* or 130% */
 
-  color: var(--c1);
+  color: var(--c2);
 }
 
 .meto__bg {
-  background: url("./../img/icon/texto.svg") no-repeat top 20px left 0px;
+  background: url("./../../img/icon/texto.svg") no-repeat top 20px left 0px;
   background-size: contain;
   padding: 80px;
 }
