--- a/assets/css/svgs-keyframes.css
+++ b/assets/css/svgs-keyframes.css
@@ -1,9 +1,15 @@
 @keyframes rotate {
   0% {
-    transform: rotate(0deg);
+    transform: rotate(00deg) translate(50px, 10px);
+  }
+  50% {
+    transform: rotate(180deg) translate(100px, 30px);
+  }
+  60% {
+    transform: rotate(150deg) translate(100px, 30px);
   }
   100% {
-    transform: rotate(60deg);
+    transform: rotate(360deg) translate(100px, 30px);
   }
 }
 
@@ -92,14 +98,14 @@
   0% {
     opacity: 1;
     width: 0;
-    stroke-width: 5;
-
+    stroke-width: 3;
     x: 500px;
   }
-  30% {
-    opacity: 1;
+
+  60% {
+    opacity: 0.8;
     x: 300px;
-    stroke-width: 5;
+    stroke-width: 2;
   }
   100% {
     opacity: 0;
@@ -110,14 +116,157 @@
     opacity: 1;
     width: 0;
     x: 900px;
+    stroke-width: 3;
   }
-  40% {
+  20% {
     opacity: 1;
     width: 299px;
     x: 700px;
+    stroke-width: 2;
   }
   100% {
     opacity: 0;
     width: 0;
+  }
+}
+
+@keyframes code-r1 {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 246px;
+  }
+}
+
+@keyframes code-r2 {
+  0% {
+    width: 0;
+    opacity: 0;
+  }
+  1% {
+    opacity: 1;
+  }
+  100% {
+    width: 164px;
+    opacity: 1;
+  }
+}
+
+@keyframes code-r3 {
+  0% {
+    width: 0;
+    opacity: 0;
+  }
+  1% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.6;
+  }
+  100% {
+    width: 164px;
+    opacity: 0.6;
+  }
+}
+
+@keyframes code-r4 {
+  0% {
+    width: 0;
+    opacity: 0;
+  }
+  1% {
+    opacity: 1;
+  }
+  100% {
+    width: 140px;
+    opacity: 1;
+  }
+}
+
+@keyframes code-r5 {
+  0% {
+    width: 0;
+    opacity: 0;
+  }
+  1% {
+    opacity: 1;
+  }
+  30% {
+    width: 150px;
+    opacity: 1;
+  }
+  90% {
+    width: 100px;
+  }
+  100% {
+    width: 273px;
+    opacity: 1;
+  }
+}
+
+@keyframes code-r6 {
+  0% {
+    width: 0;
+    opacity: 0;
+  }
+  1% {
+    opacity: 1;
+  }
+  100% {
+    width: 240px;
+    opacity: 1;
+  }
+}
+@keyframes code-r7 {
+  0% {
+    width: 0;
+    opacity: 0;
+  }
+  1% {
+    opacity: 1;
+  }
+  100% {
+    width: 52px;
+    opacity: 1;
+  }
+}
+@keyframes code-r8 {
+  0% {
+    width: 0;
+    opacity: 0;
+  }
+  1% {
+    opacity: 1;
+  }
+  100% {
+    width: 150px;
+    opacity: 1;
+  }
+}
+@keyframes code-r9 {
+  0% {
+    width: 0;
+    opacity: 0;
+  }
+  1% {
+    opacity: 1;
+  }
+  100% {
+    width: 172px;
+    opacity: 1;
+  }
+}
+@keyframes code-r10 {
+  0% {
+    width: 0;
+    opacity: 0;
+  }
+  1% {
+    opacity: 0.6;
+  }
+  100% {
+    width: 100px;
+    opacity: 0.6;
   }
 }
