--- a/assets/css/secoes/header.css
+++ b/assets/css/secoes/header.css
@@ -5,7 +5,8 @@ header {
   font-size: 1.125rem;
   text-transform: uppercase;
 
-  color: #404040;
+  color: var(--c3);
+  padding-top: 2rem;
 }
 
 .header-left a,
