--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,3 +15,4 @@
 @import url("./../css/secoes/depo.css");
 @import url("./../css/secoes/diferenciais.css");
 @import url("./../css/secoes/footer.css");
+@import url("./../css/secoes/projetos.css");
