--- a/assets/css/secoes/projetos.css
+++ b/assets/css/secoes/projetos.css
@@ -1,13 +1,13 @@
-.proj-capa {
+.proj-tit {
   display: grid;
   grid-template-columns: 1fr 1fr;
   padding: 80px 60px;
 }
 
 #projeto-base h2 {
-  font-family: "Saira", sans-serif;
   font-weight: 700;
   font-size: 2.5rem;
+  font-family: "Saira", sans-serif;
 
   background: linear-gradient(180deg, #7f62f4 0%, #7f44f4 100%);
   -webkit-background-clip: text;
@@ -19,4 +19,99 @@
 .proj-capa-infos {
   display: flex;
   justify-content: flex-end;
+  align-items: center;
+  font-family: "Saira", sans-serif;
+  gap: 2rem;
+}
+
+.proj-capa-infos span {
+  font-weight: 300;
+  color: var(--c2);
+}
+
+.proj-capa-infos p {
+  font-weight: 700;
+  color: var(--c3);
+  margin-top: 0.5rem;
+}
+
+.proj-capa-img {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 80px;
+}
+
+.proj-capa-img img {
+  max-width: 50%;
+}
+
+/* Seção Sobre */
+.bg-proj-about {
+  background-color: var(--white);
+  font-family: "Saira", sans-serif;
+}
+
+.proj-about-tit {
+  padding: 120px 60px;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  gap: 20px;
+}
+
+.proj-about-tit h3 {
+  font-weight: 700;
+  font-size: 2rem;
+  line-height: 120%;
+
+  color: var(--c3);
+}
+
+.proj-about-tit p {
+  font-size: 1.125rem;
+  line-height: 130%;
+  font-weight: 300;
+
+  color: var(--c2);
+  padding-top: 40px;
+}
+
+/* Seção Mockup Pequeno */
+.bg-proj-mockup {
+  box-shadow: inset 0 120px var(--white);
+}
+
+.proj-mockup {
+  display: grid;
+  padding: 0 60px;
+  grid-template-columns: 45% 45%;
+  gap: 40px;
+  justify-content: space-between;
+}
+
+/* Seção Quote */
+.proj-quote {
+  padding: 120px 60px;
+  font-family: "Saira", sans-serif;
+  font-weight: 700;
+  font-size: 2.5rem;
+  line-height: 120%;
+  text-align: center;
+
+  color: var(--c3);
+}
+
+.proj-quote span {
+  position: relative;
+}
+
+.proj-quote span::before {
+  width: 105%;
+  height: 15px;
+  background: linear-gradient(180deg, #7f62f4 0%, #7f44f4 100%);
+  content: "";
+  bottom: 0.75rem;
+  left: 50%;
+  transform: translateX(-50%);
+  position: absolute;
+  z-index: -1;
 }
