fim base projeto

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,7 @@
 @import url("./../css/secoes/step.css");
 @import url("./../css/secoes/num.css");
 @import url("./../css/secoes/port.css");
+@import url("./../css/secoes/cta.css");
 @import url("./../css/secoes/depo.css");
 @import url("./../css/secoes/diferenciais.css");
 @import url("./../css/secoes/footer.css");
