--- a/assets/css/secoes/depo.css
+++ b/assets/css/secoes/depo.css
@@ -73,26 +73,18 @@
     margin-left: 0rem;
     display: block;
     font-size: 1.125rem;
-    padding: 0 2rem;
+    padding: 0;
   }
 
   .depo-txt span {
-    position: absolute;
-    font-style: italic;
-    margin-left: -4rem;
-    margin-top: -3rem;
-    font-weight: 700;
-    font-size: 100px;
-    color: #ebe7e1;
-
-    opacity: 0.5;
+    display: none;
   }
 
   .depo p {
-    font-weight: 500;
+    font-weight: 300;
     line-height: 120%;
-
     color: #ebe7e1;
+    position: absolute;
   }
 
   .depo-nome {
