--- a/assets/css/secoes/projetos.css
+++ b/assets/css/secoes/projetos.css
@@ -75,6 +75,18 @@
   padding-top: 40px;
 }
 
+.proj-about-link {
+  margin-top: 1rem;
+  display: block;
+  color: #7f44f4;
+  transition: 0.3s ease all;
+}
+
+.proj-about-link:hover {
+  color: #3e109b;
+  text-decoration: underline;
+}
+
 /* Seção Mockup Pequeno */
 .bg-proj-mockup {
   box-shadow: inset 0 120px var(--white);
@@ -114,4 +126,106 @@
   transform: translateX(-50%);
   position: absolute;
   z-index: -1;
+}
+
+.proj-mockup2 {
+  padding: 0 60px;
+}
+
+.proj-mockup2 img {
+  width: 100%;
+  object-fit: cover;
+}
+
+.proj-next {
+  font-family: "Saira", sans-serif;
+  font-weight: 700;
+  font-size: 2.5rem;
+  color: var(--c3);
+  text-align: center;
+  margin: 0 auto;
+  /* width: 100%; */
+}
+
+.proj-next-link {
+  height: 63px;
+  margin: 80px auto;
+  overflow-y: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.proj-next-nome {
+  font-weight: 500;
+  font-size: 1.5rem;
+}
+
+.proj-next span {
+  transition: transform 300ms ease;
+}
+
+.proj-next a:hover span {
+  transform: translateY(-100%);
+}
+
+@media (max-width: 800px) {
+  .proj-tit {
+    grid-template-columns: 1fr;
+    padding: 80px 20px;
+    gap: 40px;
+  }
+
+  #projeto-base h2 {
+    font-size: 2rem;
+  }
+
+  .proj-capa-infos {
+    display: flex;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    gap: 1rem 2rem;
+  }
+
+  .proj-capa-infos p {
+    margin-top: 0rem;
+  }
+
+  .proj-capa-img {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 80px;
+  }
+
+  .proj-capa-img img {
+    max-width: 80%;
+  }
+
+  /* Seção Sobre */
+  .proj-about-tit {
+    padding: 80px 20px;
+    grid-template-columns: 1fr;
+    gap: 40px;
+  }
+
+  /* Seção Mockup Pequeno */
+  .proj-mockup {
+    padding: 0 20px;
+    grid-template-columns: 1fr;
+  }
+
+  /* Seção Quote */
+  .proj-quote {
+    padding: 120px 20px;
+    font-size: 2rem;
+  }
+
+  .proj-quote span::before {
+    width: 105%;
+    height: 10px;
+  }
+
+  .proj-mockup2 {
+    padding: 0 20px;
+  }
 }
