FEAT: seção calculo

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,3 +17,4 @@
 @import url("./../css/secoes/diferenciais.css");
 @import url("./../css/secoes/footer.css");
 @import url("./../css/secoes/projetos.css");
+@import url("./../css/secoes/calculo.css");
