--- a/assets/css/secoes/calculo.css
+++ b/assets/css/secoes/calculo.css
@@ -1,3 +1,31 @@
 #calculo {
   height: 100vh;
+  font-family: "Saira", sans-serif;
+}
+.calculo {
+  padding: 240px 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 1.5rem;
+}
+.calculo label {
+  color: var(--c2);
+  font-weight: 300;
+}
+.calculo input {
+  height: 30px;
+}
+.calculo button {
+  height: 30px;
+  padding: 0 20px;
+  font-family: "Saira", sans-serif;
+}
+.calculo h1 {
+  font-size: 3rem;
+  text-align: center;
+  margin-bottom: 40px;
+}
+#resultado span {
+  color: tomato;
 }
