FEAT styles metricas

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,3 +18,4 @@
 @import url("./../css/secoes/footer.css");
 @import url("./../css/secoes/projetos.css");
 @import url("./../css/secoes/calculo.css");
+@import url("./../css/secoes/metricas-parciais.css");
