--- a/style.css
+++ b/style.css
@@ -1311,6 +1311,84 @@ footer {
   opacity: 0;
 }
 
+.hero__grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  font-family: "Saira", sans-serif;
+  color: var(--c2);
+  font-weight: 300;
+  height: 100vh;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.hero__det {
+  padding: 0.5rem 1rem;
+  background-color: var(--c0);
+  display: inline-block !important;
+  font-family: "Mukta", sans-serif;
+  font-size: 14px;
+}
+
+.hero__tit {
+  margin-top: 1rem;
+  font-size: 3.5rem;
+  font-weight: 300;
+  color: var(--c3);
+}
+
+.hero__tit span {
+  font-weight: 500;
+}
+
+.hero__btn {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
+
+.hero__cta2 {
+  margin-left: var(--gap3);
+}
+
+@media (max-width: 800px) {
+  .hero__grid {
+    grid-template-columns: 1fr;
+    padding: 80px 20px !important;
+    height: calc(100vh - 114px);
+  }
+  .hero__tit {
+    font-size: 2.5rem;
+  }
+  .hero__btn {
+    margin-bottom: var(--gap4);
+    gap: var(--gap2);
+  }
+  .hero__btn a:last-child {
+    margin-left: var(--gap0);
+  }
+  .hero__cta {
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    width: 100%;
+    text-transform: uppercase;
+  }
+  .hero__cta2 {
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    margin-left: 0;
+    width: 100%;
+    text-transform: uppercase;
+  }
+}
 .depo {
   padding: 4rem 100px;
   font-family: "Saira", sans-serif;
@@ -1538,6 +1616,285 @@ footer {
     margin-bottom: 0rem;
   }
 }
+.diferenciais {
+  padding: 4rem 100px;
+  font-family: "Saira", sans-serif;
+}
+
+.diferenciais__item {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.diferenciais__txt {
+  padding: 0 2rem;
+}
+
+.diferenciais__txt span {
+  font-weight: 700;
+  text-transform: uppercase;
+  background: -webkit-gradient(linear, left top, left bottom, from(#7f62f4), to(#bc44f4));
+  background: linear-gradient(180deg, #7f62f4 0%, #bc44f4 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  text-fill-color: transparent;
+}
+
+.diferenciais__txt h5 {
+  font-weight: 500;
+  font-size: 2rem;
+  line-height: 125%;
+  color: var(--c3);
+}
+
+.diferenciais__txt p {
+  margin-top: 1rem;
+  font-weight: 500;
+  line-height: 125%;
+  color: var(--c2);
+}
+
+#diferenciais__responsivo {
+  margin: 6rem 0;
+}
+
+#diferenciais__codigo {
+  margin-bottom: 4rem;
+}
+
+@media (max-width: 800px) {
+  .diferenciais {
+    padding: 4rem 20px;
+  }
+  .diferenciais__item {
+    grid-template-columns: 1fr;
+  }
+  .diferenciais__txt {
+    padding: 0 1rem;
+    margin-bottom: 4rem;
+  }
+  #diferenciais__responsivo {
+    margin: 6rem 0 10rem 0;
+  }
+  #diferenciais__codigo {
+    margin-bottom: 4rem;
+  }
+  #diferenciais__codigo .diferenciais__img {
+    grid-row: 2;
+  }
+}
+.meto {
+  background-color: var(--c0);
+}
+
+/* Não sei se vou usar o texto puro ou o svg */
+.meto h2 {
+  display: none;
+}
+
+.meto__grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 2rem;
+  margin-top: 2.5rem;
+}
+
+.meto__grid li {
+  background: var(--bg);
+  -webkit-box-shadow: 0px 8px 80px rgba(0, 0, 0, 0.11), 0px 2.92013px 29.2013px rgba(0, 0, 0, 0.075898), 0px 1.41767px 14.1767px rgba(0, 0, 0, 0.061192), 0px 0.694968px 6.94968px rgba(0, 0, 0, 0.048808), 0px 0.274791px 2.74791px rgba(0, 0, 0, 0.034102);
+  box-shadow: 0px 8px 80px rgba(0, 0, 0, 0.11), 0px 2.92013px 29.2013px rgba(0, 0, 0, 0.075898), 0px 1.41767px 14.1767px rgba(0, 0, 0, 0.061192), 0px 0.694968px 6.94968px rgba(0, 0, 0, 0.048808), 0px 0.274791px 2.74791px rgba(0, 0, 0, 0.034102);
+  border-radius: 16px;
+  padding: 1rem 1rem 1.5rem 1.5rem;
+  position: relative;
+}
+
+.meto__num {
+  font-family: "Poppins", serif;
+  font-weight: 700;
+  font-size: 4rem;
+  line-height: 5rem;
+  background: -webkit-gradient(linear, left bottom, left top, color-stop(-44.37%, rgba(127, 127, 127, 0)), color-stop(-44.36%, rgba(180, 180, 180, 0)), color-stop(24.05%, rgba(172, 172, 172, 0.35)), to(rgba(164, 161, 161, 0.89703)));
+  background: linear-gradient(360deg, rgba(127, 127, 127, 0) -44.37%, rgba(180, 180, 180, 0) -44.36%, rgba(172, 172, 172, 0.35) 24.05%, rgba(164, 161, 161, 0.89703) 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  text-fill-color: transparent;
+}
+
+.meto__icon {
+  background-color: var(--c3);
+  position: absolute;
+  padding: 1rem;
+  right: 0;
+  -webkit-transform: translateX(20%) translateY(-80%);
+  transform: translateX(20%) translateY(-80%);
+  -webkit-box-shadow: -2px 3px 20px 4px rgba(0, 0, 0, 0.25);
+  box-shadow: -2px 3px 20px 4px rgba(0, 0, 0, 0.25);
+}
+
+.meto__icon img {
+  max-width: 60px;
+}
+
+.meto__txt {
+  padding-top: 1rem;
+}
+
+.meto__txt h3 {
+  font-family: "Saira", sans-serif;
+  font-weight: 700;
+  font-size: 2rem;
+  line-height: 3rem;
+  background: -webkit-gradient(linear, left top, right top, from(#7f62f4), to(#f48162));
+  background: linear-gradient(90deg, #7f62f4 0%, #f48162 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  text-fill-color: transparent;
+  opacity: 0.6;
+}
+
+.meto__txt p {
+  font-family: "Poppins", sans-serif;
+  font-weight: 300;
+  font-size: 1rem;
+  line-height: 1.25rem;
+  margin-top: 1rem;
+  color: var(--c2);
+}
+
+.meto__bg {
+  background: url("./../../img/icon/texto.svg") no-repeat top 20px left 0px;
+  background-size: contain;
+  padding: 80px;
+}
+
+@media (max-width: 800px) {
+  .meto {
+    padding: 20px;
+    position: relative;
+  }
+  .meto__bg {
+    background: none;
+    padding: 0px;
+  }
+  .meto h2 {
+    font-family: "Saira", sans-serif;
+    font-size: 6rem;
+    letter-spacing: -5px;
+    line-height: 100%;
+    text-transform: uppercase;
+    font-weight: 700;
+    color: var(--c3);
+    opacity: 0.1;
+    display: block;
+    word-break: break-all;
+    max-width: 6ch;
+    margin-bottom: -2rem;
+    text-align: center;
+  }
+  .meto__grid {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+  .meto__grid li {
+    padding: 1rem;
+  }
+  .meto__num {
+    font-size: 3rem;
+    line-height: 100%;
+  }
+  .meto__icon {
+    position: absolute;
+    -webkit-transform: translateX(20%) translateY(-40%);
+    transform: translateX(20%) translateY(-40%);
+  }
+  .meto__icon img {
+    max-width: 50px;
+  }
+  .meto__txt {
+    padding-top: 0.5rem;
+  }
+  .meto__txt h3 {
+    padding-right: 3rem;
+    opacity: 0.6;
+  }
+}
+.num {
+  background-color: var(--c3);
+}
+
+.num__grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  font-family: "Saira", sans-serif;
+  padding: 2rem 80px;
+}
+
+.num__grid img {
+  -webkit-transform: scale(0.8);
+  transform: scale(0.8);
+}
+
+.num__item {
+  display: grid;
+  grid-template-columns: auto 1fr;
+}
+
+.num__dest {
+  font-weight: 700;
+  font-size: 3rem;
+  color: var(--bg);
+  grid-column: 2;
+}
+
+.num__p {
+  font-weight: 300;
+  line-height: 120%;
+  color: var(--c1);
+  grid-column: 2;
+}
+
+.num__txt {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  margin-left: 1rem;
+  gap: 0.5rem;
+}
+
+@media (max-width: 800px) {
+  .num__grid {
+    display: grid;
+    grid-template-columns: 1fr;
+    padding: 2rem 20px;
+    justify-items: center;
+    gap: 4rem;
+  }
+  .num__txt {
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+  }
+  .num__item {
+    grid-template-columns: 1fr 1fr;
+    justify-items: end;
+  }
+  .num__p {
+    text-align: center;
+  }
+}
 #page-calculo {
   height: 100vh;
   font-family: "Saira", sans-serif;
@@ -1581,4 +1938,43 @@ footer {
 
 #resultado span {
   color: tomato;
+}
+
+/* Estilos do formulário */
+form {
+  margin-bottom: 20px;
+}
+
+label {
+  display: block;
+  margin-bottom: 5px;
+}
+
+input[type=number] {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin-bottom: 10px;
+}
+
+button[type=submit] {
+  background-color: #007bff;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+button[type=submit]:hover {
+  background-color: #0069d9;
+}
+
+#report {
+  white-space: pre-line;
+  font-family: "Saira", sans-serif;
+  margin-top: 20px;
+  border: 1px solid #ccc;
+  padding: 10px;
 }
